typescript/checker/tests/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration3.ts.stderr
error: Unexpected token Some(Word(Foo))
 --> $DIR/tests/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration3.ts:2:19
  |
2 |     static public Foo() { }
  |                   ^^^

